--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -20,5 +20,11 @@
 	<string>2</string>
 	<key>PlexPluginMode</key>
 	<string>AlwaysOn</string>
+	<key>PlexAgentAttributionText</key>
+	<string>
+    Ciné-Passion Metadata Agent, developed by 
+    &lt;a href=&quot;http://oncleben31.cc&quot;&gt;Oncleben31&lt;/a&gt;&lt;br/&gt;
+    Data are hosted on &lt;a href=&quot;http://passion-xbmc.org/scraper/&quot;&gt;Ciné-Passion Database&lt;/a&gt;. Go there to modify data if needed.
+  </string>
 </dict>
 </plist>
