--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -24,7 +24,7 @@
 	<string>
     Ciné-Passion Metadata Agent, developed by 
     &lt;a href=&quot;http://oncleben31.cc&quot;&gt;Oncleben31&lt;/a&gt;&lt;br/&gt;
-    French and English data are hosted on &lt;a href=&quot;http://passion-xbmc.org/scraper/&quot;&gt;Ciné-Passion Database&lt;/a&gt;. Go there to modify data if needed. NOTICE : only 300 requests by day.
+    French and English data are hosted on &lt;a href=&quot;http://passion-xbmc.org/scraper/&quot;&gt;Ciné-Passion Database&lt;/a&gt;. Go there to modify data if needed. NOTICE : You must have a login and be a donator to use it.
   </string>
 </dict>
 </plist>
